--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "^0.9.5"
   },
   "dependencies": {
+    "prop-types": "^15.6.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
